--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Page not found - {{ site.title }}</title>
+    <title>Page not found!</title>
     
-    <style id='page-skin-1' type='text/css'>
+    <style type='text/css'>
     </style>
   </head>
   <body>
